# traitreg

./: CHANGELOG.md  Cargo.toml  README.md
examples/: Cargo.toml  complete.rs  simple.rs
examples/src/bin_error/: not_register_impl.rs  register_impl_for_array.rs  register_impl_for_inferred.rs  register_impl_for_never.rs  register_impl_for_pointer.rs  register_impl_for_reference.rs  register_impl_for_tuple.rs  register_self_impl.rs  register_struct_with_missing_constructor.rs
src/: lib.rs
tests/: api_misuse.rs  api_usage.rs  out_of_order_registration.rs  registry_api.rs
tests/api_misuse/: not_register_impl.rs  not_register_impl.stderr  register_impl_for_array.rs  register_impl_for_array.stderr  register_impl_for_inferred.rs  register_impl_for_inferred.stderr  register_impl_for_never.rs  register_impl_for_never.stderr  register_impl_for_pointer.rs  register_impl_for_pointer.stderr  register_impl_for_reference.rs  register_impl_for_reference.stderr  register_impl_for_tuple.rs  register_impl_for_tuple.stderr  register_self_impl.rs  register_self_impl.stderr  register_struct_with_missing_constructor.rs  register_struct_with_missing_constructor.stderr
tests/api_usage/: empty_registry.rs  register_impl_for_enum.rs  register_impl_for_struct.rs  register_impl_for_type.rs  register_impl_for_union.rs  registry_with_items.rs
traitreg-macros/: Cargo.toml
traitreg-macros/src/: lib.rs
