[package]
name = "examples"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
traitreg = { path = "../" }
